<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/laranja_padrao"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints"
        android:background="@color/laranja_padrao"
        >

   <ImageView
       android:layout_width="60dp"
       android:layout_height="60dp"
       android:src="@drawable/logo_linkverse"
       android:layout_weight="1"
       android:layout_marginTop="100dp"

       />



        />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="25dp"
        android:elevation="10dp" >

        <TextView
            android:id="@+id/txv_entrar_linkeverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/laranja_secundario"
            android:layout_gravity="start"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/edt_login"
            android:textColor="@color/texto_fundo"
            android:background="@drawable/edt_background"
            android:padding="15dp"
            android:layout_marginTop="32dp"
            android:hint="@string/digite_o_seu_nome"
            android:autofillHints="name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/edt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/edt_password"
            android:textColor="@color/texto_fundo"
            android:background="@drawable/edt_background"
            android:padding="15dp"
            android:layout_marginTop="32dp"
            android:autofillHints="password"
            />

    <LinearLayout
        android:id="@+id/secondlinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_background"
        android:orientation="horizontal"
     >

        <TextView
            android:id="@+id/insert_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"

            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continua_conectado"
            android:layout_marginTop="10dp"

            />
    </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="entrar"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/laranja_padrao"
            app:cornerRadius="20dp"

            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ou"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:id="@+id/thirdlinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_background"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twiter"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google"
                android:layout_weight="1"

                />

        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>